[package]
name = "futures-mpsc"
version = "0.1.1"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["futures", "async", "future"]
repository = "https://github.com/carllerche/futures-mpsc"
homepage = "https://github.com/carllerche/futures-mpsc"
documentation = "https://docs.rs/futures-mpsc"
description = """
A futures aware, bounded, MPSC channel with back pressure support.
"""

[dependencies]
futures = "0.1"
